# clue-solver

./: .dir-locals.el  README.org  simple.cabal
src/: ConfigGame.hs  GameOps.hs  Lib.hs
test/: Spec.hs  test-input  test-k-fail-no-parse  test-k-fail-not-integer  test-k-fail-same-name  test-player-k
